# strategykit

./: .gitignore  CONTRIBUTING.md  DATA_STRATEGY.md  FUTURE_ROADMAP.md  GITHUB_SETUP.md  HOW_IT_WORKS.md  LICENSE  MANUAL_PYPI_UPLOAD.md  NAME_OPTIONS.md  NEXT_STEPS.md  POST_PUBLISH_TODO.md  PUBLISH_NOW.md  PYPI_GUIDE.md  PYPI_UPLOAD_STATUS.md  QUICK_START_GUIDE.md  README.md  README_DATA_STRATEGY.md  TOKEN_SETUP.md  clear_credentials.sh  pyproject.toml  requirements.txt  verify_install.py
examples/: beginner_tutorial.py  demo.py  quick_demo.py  real_world_case_study.py  super_easy_mode.py  using_curated_data.py
src/business_frameworks/: __init__.py  ansoff_matrix.py  bcg_matrix.py  company_data.py  templates.py
src/business_frameworks/data/companies/: AAPL.json
src/strategykit/: __init__.py  pestel.py  porters_five_forces.py  swot.py
tests/: __init__.py  test_ansoff.py  test_bcg.py  test_pestel.py  test_porters.py  test_swot.py
