[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "business-frameworks"
version = "0.2.0"
description = "Strategic framework toolkit for MBA students and business analysts"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "StrategyKit Contributors"}
]
keywords = ["mba", "business", "strategy", "frameworks", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hkj13/business-frameworks"
Documentation = "https://business-frameworks.readthedocs.io"
Repository = "https://github.com/hkj13/business-frameworks"
Issues = "https://github.com/hkj13/business-frameworks/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
business_frameworks = ["data/companies/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=business_frameworks --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
